--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "s3-share"
-version = "0.1.0"
+version = "0.1.1"
 description = "CLI tool for sharing files via Amazon S3 with presigned URLs"
 readme = "README.md"
 license = { file = "LICENSE" }
@@ -10,7 +10,7 @@ authors = [
   { name = "Dennis Conrad", email = "dennis.conrad@cloudinental.com" },
 ]
 classifiers = [
-    "Development Status :: 4 :: Beta",
+    "Development Status :: 4 - Beta",
     "Environment :: Console",
     "Intended Audience :: Developers",
     "Intended Audience :: System Administrators",
