--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aws-s3-share"
-version = "0.1.2"
+version = "0.1.3"
 description = "CLI tool for sharing files via Amazon S3 with presigned URLs"
 readme = "README.md"
 license = { file = "LICENSE" }
@@ -28,6 +28,7 @@ classifiers = [
 dependencies = [
     "boto3>=1.38.32",
     "click>=8.2.1",
+    "pipx>=1.7.1",
     "tomli>=2.2.1; python_version < '3.11'",
 ]
 
@@ -48,6 +49,7 @@ dev = [
     "pytest-cov>=6.1.1",
     "pytest-mock>=3.14.1",
     "ruff>=0.11.13",
+    "twine>=6.1.0",
 ]
 
 [project.scripts]
